style.css
/* http://meyerweb.com/eric/tools/css/reset/ 
   v2.0 | 20110126
   License: none (public domain)
*/

/* Meyers reset - start */

html,
body,
div,
span,
applet,
object,
iframe,
h1,
h2,
h3,
h4,
h5,
h6,
p,
blockquote,
pre,
a,
abbr,
acronym,
address,
big,
cite,
code,
del,
dfn,
em,
img,
ins,
kbd,
q,
s,
samp,
small,
strike,
strong,
sub,
sup,
tt,
var,
b,
u,
i,
center,
dl,
dt,
dd,
ol,
ul,
li,
fieldset,
form,
label,
legend,
table,
caption,
tbody,
tfoot,
thead,
tr,
th,
td,
article,
aside,
canvas,
details,
embed,
figure,
figcaption,
footer,
header,
hgroup,
menu,
nav,
output,
ruby,
section,
summary,
time,
mark,
audio,
video {
  margin: 0;
  padding: 0;
  border: 0;
  font-size: 100%;
  font: inherit;
  vertical-align: baseline;
}
/* HTML5 display-role reset for older browsers */
article,
aside,
details,
figcaption,
figure,
footer,
header,
hgroup,
menu,
nav,
section {
  display: block;
}
body {
  line-height: 1;
}
ol,
ul {
  list-style: none;
}
blockquote,
q {
  quotes: none;
}
blockquote:before,
blockquote:after,
q:before,
q:after {
  content: "";
  content: none;
}
table {
  border-collapse: collapse;
  border-spacing: 0;
}

/* Meyers reset - end */

/* ************************************** My Code start here ************************************** */

/***************************
--------CSS Variables-------
*****************************/

:root {
  --bg-color: #f0eef1;
  --primary-color: #fffbfb;
  --btn-bg-color: #333;
  --btn-bg-hover: rgb(85, 83, 83);
}

/***************************
------------Main Page----------
*****************************/
.main-container {
  display: flex;
  flex-direction: column;
  padding: 1.5rem 0;
  /* flex: 1; */
  font-family: "Roboto", sans-serif;
  width: 90%;
  margin-left: auto;
  margin-right: auto;
  /* text-align: center; */
  background-color: var(--bg-color);
}

svg {
  width: 3rem;
}

/***************************
------------Header----------
*****************************/

/* header: page title*/

.header {
  display: flex;
  justify-content: space-between;
  /* max-height: 150px; */
  padding: 10px;
  background-color: var(--primary-color);
}

.page-title-wrapper {
  display: flex;
  justify-content: center;
  align-items: top;
}

.page-title-wrapper > div {
  padding: 0 5px;
}

.page-title-wrapper > div > h2 {
  display: flex;
  align-items: center;
  gap: 10px;
  font-size: 3rem;
}

/* header: library */

.library-log {
  border: 2px black solid;
  padding: 1.1rem 0.7rem;
  border-radius: 0.4rem;
  width: 200px;
}

.library-log > h2 {
  text-align: center;
  font-size: 1.4rem;
  padding-bottom: 0.8rem;
}

.library-log-details > div {
  display: flex;
  justify-content: space-between;
  padding-bottom: 0.3rem;
  font-size: 1.1rem;
}

/***************************
------------Main Body----------
*****************************/

main {
  height: 100vh;
}

.new-book-btn-wrapper {
  display: flex;
  padding: 20px 0;
}

#new-book-btn {
  display: block;
  margin: 0 auto;
  padding: 20px;
  font-size: 20px;
  background-color: var(--btn-bg-color);
  color: white;
  border: none;
  border-radius: 10px;
  cursor: pointer;
}

#new-book-btn:hover {
  background-color: var(--btn-bg-hover);
}

/* Form */

form {
  /* To hide the form */
  display: none;
  width: 500px;
  margin: 50px auto;
  text-align: center;
  padding: 20px;
  border: 1px solid #ddd;
  border-radius: 10px;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
}

input[type="text"],
input[type="number"],
select {
  width: 90%;
  padding: 12px;
  font-size: 16px;
  margin-top: 8px;
  border: 1px solid #ddd;
  border-radius: 5px;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
  outline: none;
  transition: 0.3s;
  margin-bottom: 10px;
}

input[type="text"]:focus,
input[type="number"]:focus,
select:focus {
  border-color: solid 1px #333;
  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
}

label {
  font-size: 18px;
  margin-bottom: 10px;
  display: block;
}

input[type="submit"] {
  width: 100%;
  padding: 12px 20px;
  font-size: 18px;
  margin-top: 20px;
  background-color: var(--btn-bg-color);
  color: #fff;
  border: none;
  border-radius: 5px;
  cursor: pointer;
}

input[type="submit"]:hover {
  background-color: var(--btn-bg-hover);
}

/* library cards */
#library {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
  align-content: end;
}

.book-card {
  display: flex;
  flex-direction: column;
  gap: 10px;
  width: 300px;
  height: 220px;
  margin: 10px;
  padding: 20px;
  border: 1px solid #ccc;
  border-radius: 10px;
  text-align: center;
}

.book-title {
  margin: 0;
  font-size: 26px;
}

.book-author {
  margin: 5px 0 0 0;
  font-size: 20px;
}

.book-body {
  padding: 20px;
  text-align: center;
}

.book-pages {
  margin: 0;
  font-size: 18px;
}

button {
  padding: 10px 20px;
  border: 2px solid white;
  border-radius: 5px;
  font-size: 16px;
  font-weight: bold;
  background-color: var(--btn-bg-color);
  color: #fff;
  cursor: pointer;
}

button:hover {
  background-color: var(--btn-bg-hover);
  color: #fff;
}

.read-status {
  background-color: rgb(145, 145, 226);
  padding: 3px;
  font-size: 16px;
}

